@@ -1,3 +1,7 @@
+Wed Feb 26 14:19:23 2003  George Lebl <jirka@5z.com>
+
+	* src/graphing.c: plot every 2 pixels and optimize things a bit
+
 Wed Feb 26 13:53:38 2003  George Lebl <jirka@5z.com>
 
 	* src/mpwrap.[ch]: add ability to get doubles
